# MarketResearch

./: .gitignore  AGENTS.md  README.md  idea.md  openapi.yaml
.github/workflows/: ci.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-starter-bootstrap.md  1-2-auth-login.md  1-8-app-shell.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief.md
_bmad-output/planning-artifacts/ux-designs/ux-market-insight-os-2026-06-21/: .decision-log.md  DESIGN.md  EXPERIENCE.md  review-accessibility.md  review-rubric.md  validation-report.html  validation-report.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
api/: pyproject.toml
api/app/: config.py  deps.py  errors.py  main.py
api/app/internal/: __init__.py
api/app/routers/: __init__.py
api/app/schemas/: __init__.py
api/app/services/: __init__.py
api/tests/: test_health.py
supabase/: config.toml
web/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/(app)/: layout.test.tsx  layout.tsx
web/components/: login-form.tsx  logout-button.tsx  sign-up-form.tsx  update-password-form.tsx
web/components/app-shell/: auth-badge.tsx  bottom-tab-bar.test.tsx  bottom-tab-bar.tsx  nav-items.ts  screen-placeholder.tsx  side-nav.tsx
web/components/brand/: directional-value.test.tsx  directional-value.tsx
web/lib/: database.types.ts
web/lib/supabase/: proxy.test.ts  proxy.ts
(+8 files in other folders)
