[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.111.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.0",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "supabase>=2.31.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100  # 한글 docstring/주석 빈도 고려(통용 값)

[tool.ruff.lint]
# E/F=pycodestyle·pyflakes, I=isort, UP=pyupgrade, B=bugbear
select = ["E", "F", "I", "UP", "B"]
